--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,10 @@
+# -1.0 jobs
+# -1.1 guilds
+# -1.2 general xp
+# -1.3 scoreboard; 1.3.1 config level up
 main: fr.overcraftor.mmo.Main
 name: MMORPG
-version: 1.3 #1.0 jobs; 1.1 guilds; 1.2 general xp; 1.3 scoreboard;
+version: 1.3.1
 author: Overcraftor
 database: true
 description: "Discord: Overcraftor#4841 | Plugin MMO pour le serveur Monster-MC | Commande par Azrotho fait par Overcraftor avec <3"
