--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group 'fr.overcraftor.mmo'
-version '1.3.1'
+version '2.0-SNAPSHOT'
 compileJava.options.encoding = 'UTF-8'
 
 repositories {
