--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,9 +2,10 @@
 # -1.1 guilds
 # -1.2 general xp
 # -1.3 scoreboard; 1.3.1 config level up
+# 2.0 MAJ 23/01/2021 -> mana + aptitudes + sorts
 main: fr.overcraftor.mmo.Main
 name: MMORPG
-version: 1.3.1
+version: 2.0-SNAPSHOT
 author: Overcraftor
 database: true
 description: "Discord: Overcraftor#4841 | Plugin MMO pour le serveur Monster-MC | Commande par Azrotho fait par Overcraftor avec <3"
@@ -33,3 +34,25 @@ commands:
     description: Command pour ajouter de l'exp a un joueur
   setxp:
     description: Commande pour definir l'exp d'un joueur
+
+  # APTITUDES
+  addaptitude:
+    description: Command pour ajouter de l'aptitude a un joueur
+    aliases: addapt
+  setaptitude:
+    description: Command pour definir l'aptitude d'un joueur
+    aliases: setapt
+
+  #  MANA
+  addmaxmana:
+    description: Ajouter du mana max a un joueur
+    aliases: amm
+  setmaxmana:
+    description: Definir le mana max d'un joueur
+    aliases: smm
+  addmana:
+    description: Ajouter du mana a un joueur
+    aliases: am
+  setmana:
+    description: Definir le mana  d'un joueur
+    aliases: setm
