--- a/build.gradle
+++ b/build.gradle
@@ -5,16 +5,16 @@ plugins {
 group 'fr.overcraftor.mmo'
 version '2.0-SNAPSHOT'
 compileJava.options.encoding = 'UTF-8'
+sourceCompatibility = 11
+targetCompatibility = 11
 
 repositories {
-    mavenCentral() // This is needed for dependencies.
     mavenLocal() // This is needed for CraftBukkit and Spigot.
 
-    maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
     maven { url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/' } //PLACE HOLDER DEPENDENCIES
 }
 
 dependencies {
-    compileOnly 'org.spigotmc:spigot-api:1.14.4-R0.1-SNAPSHOT' // The Spigot API with no shadowing. Requires the OSS repo.
+    compileOnly 'org.spigotmc:spigot:1.14.4-R0.1-SNAPSHOT' // The full Spigot server with no shadowing. Requires mavenLocal.
     compileOnly 'me.clip:placeholderapi:2.10.9' // PLACE HOLDER API
 }
