--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,15 @@ plugins {
 group 'fr.overcraftor.mmo'
 version '2.0-SNAPSHOT'
 compileJava.options.encoding = 'UTF-8'
-sourceCompatibility = 8
-targetCompatibility = 8
 
 repositories {
     mavenLocal() // This is needed for CraftBukkit and Spigot.
+    mavenCentral()
 
-    maven { url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/' } //PLACE HOLDER DEPENDENCIES
+    maven{
+        url "https://repo.extendedclip.com/content/repositories/placeholderapi/"
+    }
+    //PLACE HOLDER DEPENDENCIES
 }
 
 dependencies {
