Ajout des régions

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -63,3 +63,6 @@ commands:
   mmo:
     description: Commande administrative
     aliases: mmorpg
+
+  wimr:
+    description: Voir sa region WorldGuard
